--- a/desktop/CSS/guard.css
+++ b/desktop/CSS/guard.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0); /* Schwarzes Overlay mit Transparenz */
+    background: rgb(70, 69, 82); /* Schwarzes Overlay mit Transparenz */
     display: none; /* Standardmäßig unsichtbar */
     z-index: 1000; /* Überlagert alles andere */
 }
